Adds vanilla example

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -1,5 +1,13 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+    <h1>GitHub issue #2240</h1>
+
+    <h2>Vanilla</h2>
+    <twig:WorkHoursVanillaOverview />
+
+    <hr>
+
+    <h2>Dependent fields</h2>
     <twig:WorkHoursOverview />
 {% endblock %}
